--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "test:Avatar": "vue serve ./src/components/Avatar/test.vue"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
+    "mockjs": "^1.1.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
